...
    <string name="password">password</string>>
    <string name="username">username</string>
    <string name="register">Register</string>>
    <string name="email_hint">Your email address</string>>
    <string name="repeat_password_hint">Confirm the password</string>>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="sign_in_failure">Incorrect email or password</string>
    <string name="email">email</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="forgot_password">forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="reset_link_sent">A reset link has been sent</string>
...
