...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.MapActivity"
    tools:layout="@layout/activity_main">

    <Button
        android:id="@+id/butRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
...
