...
                    android:onClick="onEditImageClicked"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/event_details_title"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:enabled="false"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_img_layout"
...
